# 9_evaluation_selection

./: .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: python-package.yml
data/: test3.csv
src/forest_ml/: data.py  defs.py  dim_red_type.py  eda.py  model_type.py  params.py  pipeline.py  train.py
tests/: test_train.py
