[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = ""
authors = ["Filinova Marina <filinugu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"
pandas = "^1.4.2"
click = "^8.1.3"
mlflow = "^1.25.1"
joblib = "^1.1.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
