[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "Homework for RS School Machine Learning course"
authors = ["Filinova Marina <filinugu@gmail.com>"]
packages = [
    { include = "forest_ml", from = "src" },
]

[tool.poetry.scripts]
train = "forest_ml.train:train"
eda = "forest_ml.eda:eda"

[tool.poetry.dependencies]
python = "~3.9"
numpy = "^1.22.3"
pandas = "~1.3.5"
click = "^8.1.3"
mlflow = "^1.25.1"
joblib = "*"
sklearn = "^0.0"
pandas-profiling = {extras = ["notebook"], version = "^3.1.0"}
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
